--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-twemoji-picker": "github:brianhung/emojipicker",
     "twemoji": "^13.0.1",
     "web-vitals": "^0.2.4"
