--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.7",
+    "nodemon": "^2.0.9",
     "pusher": "^4.0.2"
   }
 }
